--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="pink">#FF4081</color>
+    <color name="light_grey">#DDDDDD</color>
+    <color name="gradient_1_purple">#33038C</color>
+    <color name="gradient_2_pink">#A435E9</color>
 </resources>
+
+
+
+
+
+
+
