--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
+             xmlns:app="http://schemas.android.com/apk/res-auto"
+             xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/home_background"
              tools:context=".HomeFragment">
+
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -12,7 +14,8 @@
         <ImageView
                 android:src="@drawable/rocket_fly_icon"
                 android:layout_width="42dp"
-                android:layout_height="100dp" android:id="@+id/imageView"
+                android:layout_height="100dp"
+                android:id="@+id/rocket_home"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="104dp"
                 app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="44dp" android:rotation="90"/>
 
@@ -20,7 +23,7 @@
                 android:src="@drawable/moon_icon"
                 android:layout_width="174dp"
                 android:layout_height="215dp"
-                android:id="@+id/imageView2"
+                android:id="@+id/moon_home"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginBottom="540dp"
                 app:layout_constraintStart_toStartOf="parent"
