--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,21 +8,21 @@
     <fragment
             android:id="@+id/FirstFragment"
             android:name="com.example.galacticore.FirstFragment"
-            android:label="@string/first_fragment_label"
+            android:label="First Fragment"
             tools:layout="@layout/fragment_first">
-
         <action
-                android:id="@+id/action_FirstFragment_to_SecondFragment"
-                app:destination="@id/SecondFragment"/>
+                android:id="@+id/action_FirstFragment_to_addTransactionFragment"
+                app:destination="@id/addTransactionFragment" />
     </fragment>
+
     <fragment
-            android:id="@+id/SecondFragment"
-            android:name="com.example.galacticore.SecondFragment"
-            android:label="@string/second_fragment_label"
-            tools:layout="@layout/fragment_second">
-
+            android:id="@+id/addTransactionFragment"
+            android:name="com.example.galacticore.AddTransactionFragment"
+            android:label="Add Transaction"
+            tools:layout="@layout/fragment_add_transaction">
         <action
-                android:id="@+id/action_SecondFragment_to_FirstFragment"
-                app:destination="@id/FirstFragment"/>
+                android:id="@+id/action_addTransactionFragment_to_FirstFragment"
+                app:destination="@id/FirstFragment" />
     </fragment>
+
 </navigation>
