--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -154,7 +154,11 @@
                                 android:layout_width="367dp"
                                 android:layout_height="98dp"
                                 android:id="@+id/listView_transaction"
-                                tools:layout_editor_absoluteY="57dp" tools:layout_editor_absoluteX="5dp"/>
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintVertical_bias="0.903"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent"/>
                         <TextView
                                 android:text="$-500"
                                 android:textColor="@color/black"
