--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,12 +16,15 @@
                 android:id="@+id/container"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="@+id/bottomNavigationView">
+                app:layout_constraintBottom_toBottomOf="parent">
 
         </FrameLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
                 android:id="@+id/bottomNavigationView"
@@ -31,6 +34,22 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:menu="@menu/bottom_nav_menu"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        <Button
+                android:text="+"
+                android:textSize="25sp"
+                android:layout_width="60dp"
+                android:layout_height="65dp"
+                android:id="@+id/button"
+                android:backgroundTint="@color/trnasacBnt_orange"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="176dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="75dp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
