--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,32 +12,36 @@
             android:layout_height="match_parent">
 
         <ImageView
-                android:src="@drawable/rocket_fly_icon"
-                android:layout_width="42dp"
-                android:layout_height="100dp"
-                android:id="@+id/rocket_home"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="104dp"
-                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="44dp" android:rotation="90"/>
-
-        <ImageView
                 android:src="@drawable/moon_icon"
                 android:layout_width="174dp"
                 android:layout_height="215dp"
                 android:id="@+id/moon_home"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="540dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="-15dp"
+                android:layout_marginTop="-20dp"/>
+        <ImageView
+                android:src="@drawable/rocket_fly_icon"
+                android:layout_width="42dp"
+                android:layout_height="100dp"
+                android:id="@+id/rocket_home"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="304dp"/>
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginStart="104dp"
+                android:layout_marginTop="44dp"
+                android:rotation="90"/>
 
         <!--main backdrop -->
         <androidx.cardview.widget.CardView
                 android:layout_width="412dp"
-                android:layout_height="575dp"
+                android:layout_height="600dp"
                 app:cardCornerRadius="30dp"
                 app:layout_constraintStart_toStartOf="parent"
                 android:id="@+id/cardView_mainBackdrop"
-                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="156dp"
-                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent">
+                android:layout_marginBottom="-15dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginTop="2dp" app:layout_constraintTop_toBottomOf="@+id/rocket_home">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -185,20 +189,18 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
 
-<!--        <androidx.cardview.widget.CardView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="50dp"-->
-<!--                app:cardBackgroundColor="@color/navigationBar_grey"-->
-<!--                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"-->
-<!--                app:layout_constraintStart_toStartOf="parent">-->
-<!--            <androidx.constraintlayout.widget.ConstraintLayout-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="match_parent">-->
+        <!--        <androidx.cardview.widget.CardView-->
+        <!--                android:layout_width="match_parent"-->
+        <!--                android:layout_height="50dp"-->
+        <!--                app:cardBackgroundColor="@color/navigationBar_grey"-->
+        <!--                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"-->
+        <!--                app:layout_constraintStart_toStartOf="parent">-->
+        <!--            <androidx.constraintlayout.widget.ConstraintLayout-->
+        <!--                    android:layout_width="match_parent"-->
+        <!--                    android:layout_height="match_parent">-->
 
-<!--            </androidx.constraintlayout.widget.ConstraintLayout>-->
-<!--        </androidx.cardview.widget.CardView>-->
-
-
+        <!--            </androidx.constraintlayout.widget.ConstraintLayout>-->
+        <!--        </androidx.cardview.widget.CardView>-->
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
