--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="txt_lightPink">#FA8D93</color>
     <color name="txt_darkpink">#FC489C</color>
 
+    <color name="trnasacBnt_orange">#F9A690</color>
     <color name="navigationBar_grey">#ADADAD</color>
 
 </resources>
